--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <packaging>jar</packaging>
 
     <name>GeoServer Manager - REST based</name>
+
     <description>
         GeoServer Manager is a library to interact with GeoServer 
         The scope of this library is to have a simple API, and use as few external 
@@ -168,7 +169,6 @@
         </site>
     </distributionManagement>
 
-
     <build>
         <plugins>
             <plugin>
@@ -176,8 +176,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -256,6 +256,10 @@
 
     <properties>
         <slf4j.version>1.5.11</slf4j.version>
+        <commons-io.version>2.0.1</commons-io.version>
+        <httpclient.version>3.1</httpclient.version>
+        <jdom.version>1.1</jdom.version>
+        <json-lib.version>2.4</json-lib.version>
     </properties>
 
     <dependencies>
@@ -263,13 +267,13 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.0.1</version>
+            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${httpclient.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -281,13 +285,13 @@
         <dependency>
             <groupId>jdom</groupId>
             <artifactId>jdom</artifactId>
-            <version>1.1</version>
+            <version>${jdom.version}</version>
         </dependency>
 
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
-            <version>2.4</version>
+            <version>${json-lib.version}</version>
             <classifier>jdk15</classifier>
         </dependency>
 
