--- a/pom.xml
+++ b/pom.xml
@@ -22,23 +22,22 @@
 * THE SOFTWARE.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.geosolutions</groupId>
     <artifactId>geoserver-manager</artifactId>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.7.0</version>
 
     <packaging>jar</packaging>
 
     <name>GeoServer Manager - REST based</name>
 
     <description>
-        GeoServer Manager is a library to interact with GeoServer 
-        The scope of this library is to have a simple API, and use as few external 
+        GeoServer Manager is a library to interact with GeoServer
+        The scope of this library is to have a simple API, and use as few external
         libs as possible.
     </description>
 
@@ -94,13 +93,15 @@
     <mailingLists>
         <mailingList>
             <name>GeoServer Manager User List</name>
-            <post>geoserver-manager-users@googlegroups.com </post>
+            <post>geoserver-manager-users@googlegroups.com</post>
             <archive>http://groups.google.com/group/geoserver-manager-users/topics</archive>
         </mailingList>
     </mailingLists>
 
     <scm>
-        <connection>scm:git:[fetch=]https://github.com/geosolutions-it/geoserver-manager.git[push=]git@github.com:geosolutions-it/geoserver-manager.git</connection>
+        <connection>
+            scm:git:[fetch=]https://github.com/geosolutions-it/geoserver-manager.git[push=]git@github.com:geosolutions-it/geoserver-manager.git
+        </connection>
         <url>https://github.com/geosolutions-it/geoserver-manager</url>
     </scm>
 
@@ -109,52 +110,52 @@
         <url>http://build.geo-solutions.it/jenkins/view/GeoServer-manager/</url>
     </ciManagement>
 
- <repositories>
-  <repository>
-   <id>boundless</id>
-   <name>Boundless Maven Repository</name>
-   <url>https://repo.boundlessgeo.com/main/</url>
-   <!-- contains snapshot and release (including third-party-dependences)               -->
-   <!-- Restlet maven Repository (http://maven.restlet.org)                             -->
-   <!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
-   <snapshots>
-     <enabled>true</enabled>
-   </snapshots>
-   <releases>
-     <enabled>true</enabled>
-   </releases>
-  </repository>
+    <repositories>
+        <repository>
+            <id>boundless</id>
+            <name>Boundless Maven Repository</name>
+            <url>https://repo.boundlessgeo.com/main/</url>
+            <!-- contains snapshot and release (including third-party-dependences)               -->
+            <!-- Restlet maven Repository (http://maven.restlet.org)                             -->
+            <!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
 
-  <repository>
-    <id>osgeo</id>
-    <name>Open Source Geospatial Foundation Repository</name>
-    <url>http://download.osgeo.org/webdav/geotools/</url>
-    <snapshots>
-      <enabled>false</enabled>
-    </snapshots>
-  </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
 
-  <repository>
-    <id>maven-restlet</id>
-    <name>Restlet Maven Repository</name>
-    <url>http://maven.restlet.org</url>
-    <snapshots>
-      <enabled>false</enabled>
-    </snapshots>
-  </repository>
+        <repository>
+            <id>maven-restlet</id>
+            <name>Restlet Maven Repository</name>
+            <url>http://maven.restlet.org</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
 
-   <repository>
-      <id>geosolutions</id>
-      <name>geosolutions repository</name>
-      <url>http://maven.geo-solutions.it/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-     <releases>
-       <enabled>true</enabled>
-     </releases>
-    </repository>
- </repositories>
+        <repository>
+            <id>geosolutions</id>
+            <name>geosolutions repository</name>
+            <url>http://maven.geo-solutions.it/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <downloadUrl>http://maven.geo-solutions.it</downloadUrl>
@@ -186,7 +187,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
-                    <detectLinks />
+                    <detectLinks/>
                     <!-- <links> <link>http://commons.apache.org/dbcp/apidocs/</link> <link>http://commons.apache.org/fileupload/apidocs/</link>
                     <link>http://download.oracle.com/javase/6/docs/api</link> </links> -->
                 </configuration>
@@ -255,11 +256,14 @@
     </reporting>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- 文件拷贝时的编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 编译时的编码 -->
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <slf4j.version>1.5.11</slf4j.version>
-        <commons-io.version>2.0.1</commons-io.version>
-        <httpclient.version>3.1</httpclient.version>
-        <jdom.version>1.1</jdom.version>
-        <json-lib.version>2.4</json-lib.version>
     </properties>
 
     <dependencies>
@@ -267,13 +271,13 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
+            <version>2.0.1</version>
         </dependency>
 
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>${httpclient.version}</version>
+            <version>3.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -285,20 +289,20 @@
         <dependency>
             <groupId>jdom</groupId>
             <artifactId>jdom</artifactId>
-            <version>${jdom.version}</version>
+            <version>1.1</version>
         </dependency>
 
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
-            <version>${json-lib.version}</version>
+            <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
 
-		<dependency>
-			<groupId>org.apache.servicemix.bundles</groupId>
-			<artifactId>org.apache.servicemix.bundles.restlet</artifactId>
-			<version>1.1.10_3</version>
+        <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.restlet</artifactId>
+            <version>1.1.10_3</version>
         </dependency>
 
         <dependency>
@@ -328,7 +332,7 @@
                 <version>1.2.16</version>
              </dependency>
         </dependency>-->
-        
+
         <!--================================================================= -->
         <!-- TEST -->
         <!--================================================================= -->
