--- a/pom.xml
+++ b/pom.xml
@@ -195,11 +195,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.7</version>
-                <configuration>
-                    <detectLinks/>
-                    <!-- <links> <link>http://commons.apache.org/dbcp/apidocs/</link> <link>http://commons.apache.org/fileupload/apidocs/</link>
-                    <link>http://download.oracle.com/javase/6/docs/api</link> </links> -->
-                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- ======================================================= -->
